@@ -1,3 +1,5 @@
+* fix 'loss_background' documentation. Reported by David Tomic. --niko
+
 * fix local variable override handling in connection with nomasterpoll
   --niko
 
